[package]
name = "deep_space"
version = "0.1.0"
authors = ["Michał Papierski <michal@papierski.net>"]
edition = "2018"

[dependencies]
num256 = "0.2"
failure = "0.1"
sha2 = "0.8.0"
num-bigint = "0.2"
num-traits = "0.2"
ripemd160 = "0.8"
serde = "1"
serde_json = "1"
serde_derive = "1"
base64 = "0.11"
rust_decimal = "1.1.0"
tendermint = "0.11.0"
signatory = { version = "0.17", features = ["ecdsa"] }
subtle-encoding = "0.5.0"
